# api-standards

./: 404.html  index.html  mkdocs.yml  pyproject.toml
01-http-standards/: index.html
02-domain-names/: index.html
03-endpoint-naming/: index.html
04-openapi-schemas/: index.html
05-api-versioning/: index.html
06-api-monitoring/: index.html
07-error-handling/: index.html
assets/: api-connections.tiff
docs/: 01-http-standards.md  02-domain-names.md  03-endpoint-naming.md  04-openapi-schemas.md  05-api-versioning.md  06-api-monitoring.md  07-error-handling.md  index.md
docs/assets/stylesheets/: extra.css
quick-start/: index.html
search/: search_index.json
