[tool.poetry]
name = "api-standards"
version = "0.1.0"
description = ""
authors = ["Alexander Berger <alexander.berger@jax.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^9.5.16"
mike = "^2.0.0"
mkdocs-git-authors-plugin = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
